# tether-ci

.github/workflows/: test.yaml
tether_sum/: CMakeLists.txt  README  conanfile.py
tether_sum/cmake/: TetherAddExecutable.cmake
tether_sum/tests/: CMakeLists.txt  tether_sum_test.cpp
tether_sum/tether_sum/: CMakeLists.txt  Config.cmake.in  config.hpp.in
tether_sum/tether_sum/include/tether_sum/: export.hpp  tether_sum.hpp
tether_sum/tether_sum/src/: tether_sum.cpp
